--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ out/
 # Local .terraform directories
 **/.terraform/*
 
+# Local .terratest directories
+**/.terratest/*
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
