fix: gitignore .terra{test,form}, npm for old markup check removed from workflow

--- a/.gitignore
+++ b/.gitignore
@@ -13,10 +13,8 @@ out/
 .DS_Store
 
 # Local .terraform directories
-**/.terraform/*
-
-# Local .terratest directories
-**/.terratest/*
+.terraform
+.terratest
 
 # .tfstate files
 *.tfstate
